Revision history for Perl module TestRail::API

0.026 2015-06-?? TEODESIAN
    - Add --no-match option to testrail-tests to find orphan tests in a tree

0.025 2015-05-21 TEODESIAN
    - Fix test failures on windows (and an issue in testrail-tests on win32)
    - Fix issue where testrail-tests was unresponsive to --help
    - Fix issue where getChildRuns would not return all child runs.

0.024 2015-05-17 TEODESIAN
    - Allow spawning of plans in Test::Rail::Parser (and those programs depending on it)
    - Fix issue where step_results were not uploaded correctly.

0.023 2015-05-13 TEODESIAN
    - Fix issue where spawning runs in plans with configurations failed.

0.022 2015-05-08 TEODESIAN
    - Fix issue where testrail-tests always attempted to turn test names into paths

0.021 2015-04-08 TEODESIAN
    - Fix issue where getChildRuns did not return anything past first run
    - Fix issue where getChildRunByName did not perform configuration filtering correctly
    - Add ability to filter by test status and assignedto id to getTests
    - Add bin/testrail-tests and bin/testrail-runs
    - Add statusNamesToIds and userNamesToIds convenience methods to TestRail::API
    - Add getRunSummary to TestRail::API

0.020 2015-03-25 TEODESIAN
    - Add getRunsPaginated and getPlansPaginated to get around 250 hardlimit in TR results
    - Modify getRuns and getPlans to use the above to actually get all runs/plans
    - Fix various defective pod surrounding those methods
    - Fix minor incorrectness in testrail-report POD

0.019 2015-03-18 TEODESIAN
    - Add createRunInPlan method to TestRail::API
    - Add translateConfigNamesToIds method to TestRail::API
    - Modified getConfigurations, and added GetConfigurationGroups for clarity
    - Add ability to spawn runs to App::Prove::TestRail and testrail-report
    - Stricter checking that passed configurations passed exist in Test::Rail::Parser
    - Require minimum version of JSON::Maybe::XS to resolve smoker failures.
