@@ -7,7 +7,7 @@ use Scalar::Util qw{reftype};
 use TestRail::API;
 use Test::LWP::UserAgent::TestRailMock;
 use Test::Rail::Parser;
-use Test::More 'tests' => 40;
+use Test::More 'tests' => 41;
 use Test::Fatal qw{exception};
 
 #Same song and dance as in TestRail-API.t
@@ -81,6 +81,16 @@ if (!$res) {
     $tap->run();
     is($tap->{'errors'},0,"No errors encountered uploading case results");
 }
+
+$fcontents = "ok 1 - STORAGE TANKS SEARED
+# whee
+not ok 2 - NOT SO SEARED AFTER ARR
+
+#   Failed test 'NOT SO SEARED AFTER ARR'
+#   at t/fake.test line 10.
+# Looks like you failed 1 test of 2.
+";
+is($tap->{'raw_output'},$fcontents,"Full raw content uploaded in non step results mode");
 
 #Check that time run is being uploaded
 my $timeResults = $tap->{'tr_opts'}->{'testrail'}->getTestResults(1);
