@@ -2,6 +2,7 @@ Revision history for Perl module TestRail::API
 
 0.026 2015-06-?? TEODESIAN
     - Add --no-match option to testrail-tests to find orphan tests in a tree
+    - Upload full raw results to TestRail when not in step_results or case_per_ok mode
 
 0.025 2015-05-21 TEODESIAN
     - Fix test failures on windows (and an issue in testrail-tests on win32)
